src/main/frontend/components/block.css
/* ... */
.cp__right-sidebar-inner {
  .references-blocks-item {
    @apply bg-gray-04;
  }
}

.block-title-wrap a.tag, .block-body a.tag {
  font-size: initial;
  opacity: 1;
}

.positioned-properties {
  @apply text-sm;
}

.positioned-properties.block-left {
  .asset-container {
    @apply max-w-[120px];
  }

  .block-title-wrap {
    @apply hidden;
  }
}

.positioned-properties.block-right {
  button {
    @apply whitespace-nowrap;
  }

  .block-title-wrap {
    @apply overflow-hidden h-6 whitespace-nowrap text-ellipsis;
  }

  .jtrigger {
    @apply px-1;
  }
}

.positioned-properties.block-below {
  .block-content.inline {
    @apply flex;
  }

  .property-k {
    color: var(--ls-primary-text-color);
  }
}

.block-tags {
  @apply flex flex-row flex-wrap self-start items-center;
  min-height: 24px;
  max-width: 256px;
}

.block-tag {
  @apply flex relative pl-2 pr-1;
}

.block-tag.private-tag {
  @apply pl-1;
}

.block-tag:hover {
  @apply bg-gray-03 rounded;
}

.block-tag a.tag {
  @apply flex text-sm font-normal items-center opacity-70;
}

.block-tag a.hash-symbol {
    @apply text-sm text-sm font-normal opacity-70;
}

.block-tag a.tag:hover, .block-tag a.hash-symbol:hover {
  @apply opacity-100;
}

.block-tag span {
  @apply whitespace-nowrap overflow-hidden;
  max-width: 160px;
  text-overflow: ellipsis;
}

.block-content-wrapper svg, .view-actions svg {
  width: 18px;
  height: 18px;
}

.ls-small-icon svg {
    width: 12px;
    height: 12px;
}
.ls-type-warning svg {
  color: var(--rx-gray-09);
}

.ls-page-title .ls-page-icon svg, .ls-page-title .ls-page-icon button {
  width: 38px;
  height: 38px;
}

.ls-page-title .positioned-properties svg, .page-ref svg {
  width: 16px;
  height: 16px;
}

.ls-page-title .positioned-properties, .ls-page-title .time-spent {
  margin-top: 15px;
}

.ls-page-title .ls-page-icon button {
  margin-top: 8px;
}

.ls-page-title .block-tags {
  @apply relative min-h-full;
}

.ls-code-editor-wrap {
  @apply relative w-full overflow-hidden rounded;

  .extensions__code-lang {
    @apply hidden;
  }

  > .code-block-actions {
    @apply flex flex-row gap-1 opacity-0 transition-opacity ease-in duration-300 absolute right-1 top-1 select-none z-[1] text-xs bg-gray-01;

    button {
      @apply !py-0 h-4 text-muted-foreground hover:text-foreground text-xs px-1;
    }

    svg {
      width: 14px;
      height: 14px;
    }
  }
}

.ls-resize-image {
  @apply flex relative;

  .handle-left, .handle-right {
    @apply absolute w-[6px] h-[15%] min-h-[30px] bg-black/30 hover:bg-black/70
    top-[50%] left-[5px] rounded-full cursor-col-resize select-none
    translate-y-[-20%] opacity-0 border border-gray-200;
  }

  .handle-right {
    @apply left-auto right-[5px]
  }

  &:hover {
    .handle-left, .handle-right {
      @apply opacity-100;
    }
  }
}

.recent-block {
  transition: background-color 0.2s cubic-bezier(0, 1, 0, 1);
  background-color: var(--ls-secondary-background-color, var(--rx-gray-03));
}

.aspect-video {
  aspect-ratio: 16 / 9;
  height: auto;
}

.ls-filters {
    div[data-testid='virtuoso-item-list'] button {
        @apply mb-2;
    }
}

